[package]
name = "eztutors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24" # explicit to pick up security fix
time = "0.2.23" # explicit to pick up security fix

[workspace]
members = ["tutor-nodb", "tutor-db"]
