[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor-service"
authors = ["peshwar9","slotito"]

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.140", features = ["derive"]}
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"